@@ -10,7 +10,7 @@ exec_prefix= @exec_prefix@
 includedir = @includedir@
 libdir = @libdir@
 javadir = ${exec_prefix}/java
-libexecdir = @libexecdir@
+libexecdir = @libexecdir@/sqlrelay
 bindir = @bindir@
 localstatedir = @localstatedir@
 sysconfdir = @sysconfdir@
