@@ -417,6 +417,10 @@ rm -rf %{buildroot}
 %{_libdir}/libsqlrconnection*
 %{_libdir}/libsqlrutil*
 %{_libdir}/libsqlrelay*
+%{_libexecdir}/sqlrlogger_*
+%{_libexecdir}/sqlrquery_*
+%{_libexecdir}/sqltranslation_*
+%{_libexecdir}/sqltrigger_*
 %{_localstatedir}/sqlrelay/tmp
 %{_localstatedir}/sqlrelay/debug
 
@@ -481,47 +485,47 @@ rm -rf %{buildroot}
 
 %{!?_without_db2:%files db2}
 %{!?_without_db2:%defattr(-, root, root)}
-%{!?_without_db2:%{_bindir}/libsqlrelay_connection_db2*}
+%{!?_without_db2:%{_libexecdir}/sqlrconnection_db2*}
 
 %{!?_without_freetds:%files freetds}
 %{!?_without_freetds:%defattr(-, root, root)}
-%{!?_without_freetds:%{_bindir}/libsqlrelay_connection_freetds*}
+%{!?_without_freetds:%{_libexecdir}/sqlrconnection_freetds*}
 
 %{!?_without_firebird:%files firebird}
 %{!?_without_firebird:%defattr(-, root, root)}
-%{!?_without_firebird:%{_bindir}/libsqlrelay_connection_firebird*}
+%{!?_without_firebird:%{_libexecdir}/sqlrconnection_firebird*}
 
 %{!?_without_mdbtools:%files mdbtools}
 %{!?_without_mdbtools:%defattr(-, root, root)}
-%{!?_without_mdbtools:%{_bindir}/libsqlrelay_connection_mdbtools*}
+%{!?_without_mdbtools:%{_libexecdir}/sqlrconnection_mdbtools*}
 
 %{!?_without_mysql:%files mysql}
 %{!?_without_mysql:%defattr(-, root, root)}
-%{!?_without_mysql:%{_bindir}/libsqlrelay_connection_mysql*}
+%{!?_without_mysql:%{_libexecdir}/sqlrconnection_mysql*}
 
 %{!?_without_odbc:%files odbc}
 %{!?_without_odbc:%defattr(-, root, root)}
-%{!?_without_odbc:%{_bindir}/libsqlrelay_connection_odbc*}
+%{!?_without_odbc:%{_libexecdir}/sqlrconnection_odbc*}
 
 %{!?_without_oracle:%files oracle8}
 %{!?_without_oracle:%defattr(-, root, root)}
-%{!?_without_oracle:%{_bindir}/libsqlrelay_connection_oracle8*}
+%{!?_without_oracle:%{_libexecdir}/sqlrconnection_oracle8*}
 
 %{!?_without_postgresql:%files postgresql}
 %{!?_without_postgresql:%defattr(-, root, root)}
-%{!?_without_postgresql:%{_bindir}/libsqlrelay_connection_postgresql*}
+%{!?_without_postgresql:%{_libexecdir}/sqlrconnection_postgresql*}
 
 %{!?_without_sqlite:%files sqlite}
 %{!?_without_sqlite:%defattr(-, root, root)}
-%{!?_without_sqlite:%{_bindir}/libsqlrelay_connection_sqlite*}
+%{!?_without_sqlite:%{_libexecdir}/sqlrconnection_sqlite*}
 
 %{!?_without_sybase:%files sybase}
 %{!?_without_sybase:%defattr(-, root, root)}
-%{!?_without_sybase:%{_bindir}/libsqlrelay_connection_sybase*}
+%{!?_without_sybase:%{_libexecdir}/sqlrconnection_sybase*}
 
 %{!?_without_router:%files router}
 %{!?_without_router:%defattr(-, root, root)}
-%{!?_without_router:%{_bindir}/libsqlrelay_connection_router*}
+%{!?_without_router:%{_libexecdir}/sqlrconnection_router*}
 
 %{!?_without_java:%files java}
 %{!?_without_java:%defattr(-, root, root)}
